[project]
name = "edifier-es300"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# E/F = pyflakes + pycodestyle (defaults), I = isort import sorting.
# E501 (line length) is left to the formatter, which won't reflow comments.
select = ["E", "F", "I"]
ignore = ["E501"]

# Modules live flat at the repo root but are the `edifier_es300` package, so a
# sibling `typing.py` shadows stdlib unless ty resolves from the parent dir.
[tool.ty.environment]
root = [".."]
python-version = "3.13"
