[project]
name = "edifier-es300"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
]

[project.scripts]
edifier-es300 = "edifier_es300.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# E/F = pyflakes + pycodestyle (defaults), I = isort import sorting.
# E501 (line length) is left to the formatter, which won't reflow comments.
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.13"
